# DataDictionary

./: .gitignore  Pipfile  README.md  setup.cfg
profiledata/: __init__.py  config.py  profiler.py
src/datadictionary/: config.py  profiler.py
src/profiledata/: __init__.py  config.py  profiler.py
tests/: test1.csv
