[metadata]
name = datadictionary
version = 0.0.3
author = Jason Atwood
author_email = jason@thedatatoldme.com
description = A package for profiling data and creating data dictionaries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasonatwood/DataDictionary
project_urls =
    Bug Tracker = https://github.com/jasonatwood/DataDictionary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
keywords = 
    data dictionary
    data profile
    data profiler

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas>=1.0.0
    openpyxl

[options.packages.find]
where = src